[tool.poetry]
name = "claudecode"
version = "0.1.0"
description = ""
authors = ["Ezequiel Bravo <126541104+jezbravo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
